K8s/Lab-4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: b4xim/nodeapp:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
          requests:
            cpu: "250m"
