K8s/Lab-4/deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment3
  labels:
    app: deployment3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment3
  template:
    metadata:
      labels:
        app: deployment3
    spec:
      containers:
        - name: deployment3
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deployment3
  labels:
    app: deployment3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: deployment3
